Added support for ARM64 standalone
Signed-off-by: Stefan Bosak <stefan.bosak@gmail.com>

--- a/.github/workflows/standalone-test-amd64-arm64.yml
+++ b/.github/workflows/standalone-test-amd64-arm64.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  test-on-linux:
+  test-on-linux-x86:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -27,6 +27,28 @@ jobs:
         run: |
           ./standalone-install.sh
       - name: 'Azure cloud tools test (amd64)'
+        run: |
+          source ./venv/bin/activate
+          az --version | head -n 1
+
+  test-on-linux-arm:
+    runs-on: ubuntu-24.04-arm
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: 'Checkout'
+        uses: actions/checkout@main
+      - name: 'Install required packages (arm64)'
+        run: |
+          sudo apt-get update && \
+          sudo apt-get -y --no-install-recommends install python3-full && \
+          sudo apt-get clean && sudo rm -rf "/var/lib/apt/lists/*"
+      - name: 'Perform standalone install (arm64)'
+        run: |
+          ./standalone-install.sh
+      - name: 'Azure cloud tools test (arm64)'
         run: |
           source ./venv/bin/activate
           az --version | head -n 1
