--- a/.github/workflows/docker-image-test-amd64-arm64.yml
+++ b/.github/workflows/docker-image-test-amd64-arm64.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  test-on-linux:
+  test-on-linux-x86:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -24,19 +24,18 @@ jobs:
         run: |
           az --version | head -n 1
 
-  test-on-mac-via-colima:
-    runs-on: macos-latest
+  test-on-linux-arm:
+    runs-on: ubuntu-24.04-arm
+    permissions:
+      contents: read
+      packages: write
+    container:
+      image: mcr.microsoft.com/azure-cli:latest
+      options:
+        -v /dev:/dev
+
     steps:
-      - name: 'Install Colima and Docker'
+      - name: 'Docker image test (arm64)'
         run: |
-          brew install docker docker-compose colima
-          colima start --arch arm64
-      - name: 'Docker info'
-        run: |
-          docker info
-      - name: 'Pull Docker image from Docker Hub'
-        run: |
-          docker pull docker.io/developmententity/aws-cloud-tools:initial
-      - name: 'Run Docker image test (arm64)'
-        run: |
-          docker run --entrypoint "/bin/sh" --network=none --rm --name azure-cloud-test mcr.microsoft.com/azure-cli:latest -c "az --version | head -n 1"
+          az --version | head -n 1
+
