Changed unification of version extraction
Signed-off-by: Stefan Bosak <stefan.bosak@gmail.com>

--- a/.github/workflows/docker-image-test-amd64-arm64.yml
+++ b/.github/workflows/docker-image-test-amd64-arm64.yml
@@ -21,8 +21,10 @@ jobs:
 
     steps:
       - name: 'Docker image test (amd64)'
+        shell: bash
         run: |
-          az --version | head -n 1
+          echo -ne "AZ_CLI_VERSION="
+          az --version | head -n 1 | awk '{print $NF}'
 
   test-on-linux-arm:
     runs-on: ubuntu-24.04-arm
@@ -36,6 +38,7 @@ jobs:
 
     steps:
       - name: 'Docker image test (arm64)'
+        shell: bash
         run: |
-          az --version | head -n 1
-
+          echo -ne "AZ_CLI_VERSION="
+          az --version | head -n 1 | awk '{print $NF}'
