--- a/.github/workflows/standalone-test-amd64-arm64.yml
+++ b/.github/workflows/standalone-test-amd64-arm64.yml
@@ -27,9 +27,11 @@ jobs:
         run: |
           ./standalone-install.sh
       - name: 'Azure cloud tools test (amd64)'
+        shell: bash
         run: |
           source ./venv/bin/activate
-          az --version | head -n 1
+          echo -ne "AZ_CLI_VERSION="
+          az --version | head -n 1 | awk '{print $NF}'
 
   test-on-linux-arm:
     runs-on: ubuntu-24.04-arm
@@ -49,6 +51,8 @@ jobs:
         run: |
           ./standalone-install.sh
       - name: 'Azure cloud tools test (arm64)'
+        shell: bash
         run: |
           source ./venv/bin/activate
-          az --version | head -n 1
+          echo -ne "AZ_CLI_VERSION="
+          az --version | head -n 1 | awk '{print $NF}'
