Updated trying to agregate multiple runners in the same job
Signed-off-by: Stefan Bosak <stefan.bosak@gmail.com>

--- a/.github/workflows/standalone-test-amd64-arm64.yml
+++ b/.github/workflows/standalone-test-amd64-arm64.yml
@@ -10,7 +10,10 @@ on:
 
 jobs:
   test-on-linux:
-    runs-on: [ubuntu-latest, ubuntu-24.04-arm]
+    runs-on: ${{ matrix.runner }}
+      strategy:
+        matrix:
+          runner: [ubuntu-latest, ubuntu-24.04-arm]
     permissions:
       contents: read
       packages: write
